# kakarot

./: .all-contributorsrc  .codespellignore  .dockerignore  .env.example  .env_example  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .tool-versions  CHANGELOG.md  LICENSE  Makefile  README.md  blockchain-tests-skip.yml  codecov.yml  conftest.py  foundry.toml  package-lock.json  package.json  protostar.toml  pyproject.toml  remappings.txt  requirements.txt  rust-toolchain  state.json  test.py  tmp  tmp.cairo
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  02_FEATURE_REQUEST.md  03_CODEBASE_IMPROVEMENT.md  04_NEW_OPCODE.yml  config.yml
.github/workflows/: cairo-ci.yml  cairo-zero-ci.yml  cairo-zero-nightly-fuzzing.yml  cairo-zero-release.yml  cairo-zero-trunk-check.yaml  changelog.yml  ci.yml  deployments.yml  doc.yml  dump_katana.yml  ef-tests.yml  ef_tests.yml  kakarot0-ci.yml  kakarot0-nightly-fuzzing.yml  kakarot0-release.yml  kakarot0-trunk-check.yaml  kakarot0-update-rpc.yml  kakarot_devnet.yml  nightly-fuzzing.yml  nightly-release.yml  pre-release.yml  release.yml  spell_check.yml  ssj-build.yml  ssj-ci.yml  ssj-ef-tests.yml  ssj-release.yml  ssj-test.yml  ssj-tests-unit.yml  ssj-trunk-check.yaml  test.yml  thoth.yml  trunk-check.yaml  update-rpc.yml
.katana/: messaging_config.json
.madara/: deploy_core_contract.py
.trunk/: trunk.yaml
.trunk/configs/: .codespellrc  .markdownlint.json  ruff.toml
aws_lambda/fee_balancer/: Dockerfile  app.py  cdk.json  fee_balancer.py  fee_balancer_lambda_stack.py  pyproject.toml  relayers.json
aws_lambda/relayers_observer/: Dockerfile  app.py  cdk.json  pyproject.toml  relayers_observer.py  relayers_observer_lambda_stack.py  requirements.txt
cache/: solidity-files-cache.json
cairo/kakarot-ssj/: .markdownlint.json  .tool-versions  LICENSE  README.md  Scarb.toml  blockchain-tests-skip.yml  bun.lockb  package-lock.json  package.json
cairo/mock_pragma/: .tool-versions  Scarb.toml
cairo/protocol_handler/: .gitignore  .tool-versions  Scarb.toml
cairo/snforge_utils/: Scarb.toml
cairo/utils/: Scarb.toml
cairo1_contracts/benchmark_cairo_calls/: .tool-versions  Scarb.toml
cairo1_contracts/cairo_messaging/: .tool-versions  Scarb.toml
cairo1_contracts/mock_pragma/: Scarb.toml
cairo1_contracts/token/: .tool-versions  Scarb.toml
cairo1_contracts/utils/: Scarb.toml
cairo_zero/backend/: starknet.cairo
cairo_zero/kakarot/: account.cairo  constants.cairo  errors.cairo  eth_rpc.cairo  evm.cairo  gas.cairo  interpreter.cairo  kakarot.cairo  library.cairo  state.cairo  storages.cairo
cairo_zero/openzeppelin/: ERC20.cairo
cairo_zero/tests/: conftest.py
cairo_zero/utils/: array.cairo  bytes.cairo  dict.cairo  eth_transaction.cairo  signature.cairo  uint256.cairo  utils.cairo
ci/: README.md
coverage/: coverage.py  resources.csv  times.csv
deployments/devnet/: deployments.json
deployments/kakarot-sepolia/: declarations.json  deployments.json  l1-addresses.json
deployments/kakarot-staging/: declarations.json  deployments.json  l1-addresses.json
deployments/mainnet/: declarations.json  l1_addresses.json
deployments/sepolia/: declarations.json  kakarot_deployments.json
deployments/staging/: kakarot_deployments.json
deployments/staging-core/: deployments.json  kakarot_deployments.json  l1_addresses.json
deployments/starknet-mainnet/: declarations.json  deployments.json  kakarot_deployments.json  l1_addresses.json
deployments/starknet-sepolia/: declarations.json  deployments.json  kakarot_deployments.json  l1_addresses.json
deployments/starknet-sepolia-staging/: declarations.json  deployments.json  kakarot_deployments.json  l1_addresses.json
deployments/testnet/: declarations.json  deployments.json
deployments/testnet2/: declarations.json  deployments.json
docker/ci/: Dockerfile  setup_16.x
docker/deployer/: Dockerfile
docker/devnet/: Dockerfile  run_and_deploy.py
docker/katana/: Dockerfile
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  evm.md  supported_opcodes.md
docs/callgraphs/: account_registry.gv  blockhash_registry.gv  contract_account.gv  externally_owned_account.gv  kakarot.gv  kethaa_deployer.gv
docs/general/: accounts.md  cairo_precompiles.md  decode_a_cairo_trace.md  kakarot_components.md
docs/mvp/: README.md
experimental_contracts/: foundry.toml
foundry_compiler/cache/: solidity-files-cache.json
integration-tests/: .env.example  Cargo.toml  log.txt
integration-tests/tests/: bytecode_test.rs
integration-tests/tests/data/: test_cases.json
integration-tests/tests/helpers/: client.rs  config.rs  mod.rs  utils.rs
kakarot-ssj/: .all-contributorsrc  .env.example  .gitignore  Makefile  README.md  blockchain-tests-skip.yml  package-lock.json  package.json  tsconfig.json
kakarot-ssj/.devcontainer/: devcontainer.json
kakarot-ssj/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
kakarot-ssj/scripts/: compute_rlp_encoding.ts  filter_tests.py  gas_debug_call.py  run_filtered_tests.py
kakarot0/docs/: SECURITY.md
kakarot_scripts/: artifacts.py  benchmark_cairo_calls.py  check_resources.py  compile_kakarot.py  constants.py  deploy_kakarot.py  withdraw_accounts.py
kakarot_scripts/data/: cairo_calls_benchmark_results.json  createx_signed_tx.json  pre_eip155_txs.json  pre_eip155_txs.py  signed_txs.json
kakarot_scripts/deployment/: declarations.py  dualvm_token_deployments.py  evm_deployments.py  (+5 more)
katana-db/: db.version  mdbx.lck
new_env/: pyvenv.cfg
scripts/: artifacts.py  check_resources.py  checker.sh  compile_integration_contracts.sh  compile_kakarot.py  constants.py  converter.sh  deploy_inc.py  deploy_kakarot.py  deploy_kakarot.sh  deploy_protocol.py  deploy_zkairvm.sh  get_latest_blockhashes.py  library.sh  logging.sh  starknet.sh  tools.sh  utils.py
sequencer/: blockhashes.json  mock_blockhashes.json
tests/: __init__.py  conftest.py  test_basic.py  test_exec_at_address.py  test_zk_evm.py  test_zk_evm2_erc20.py  test_zk_evm_erc20.py  utils.cairo
(+1140 files in other folders)
