[tool.poetry]
name = "kakarot"
version = "0.1.0"
description = "EVM interpreter written in Cairo, a sort of ZK-EVM emulator, leveraging STARK proof system."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cairo-lang = "^0.10.1"
openzeppelin-cairo-contracts = "0.5.0"
amarna = "^0.1.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
marshmallow-dataclass = "^8.5.9"
cairo-coverage = "^0.1.4"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using or importing the ABCs:DeprecationWarning",                                # from frozendict
    "ignore:lexer_state will be removed in subsequent releases. Use lexer_thread instead.", # from lark
]
asyncio_mode = "auto"
markers = ["sha3"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
